Efecto Parallax completado.

--- a/paralax.html
+++ b/paralax.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paralax</title>
+    <link rel="stylesheet" href="paralaxstyle.css">
 </head>
 <body>
-    
+    <div class="parallax-container">
+        <div class="image image__background">
+            <img src="images/Background.png" alt="fondo de caída, en donde Alicia entra al país de la maravillas.">
+        </div>
+
+        <div class="image image__middleground">
+            <div class="card one"></div>
+            <div class="card two"></div>
+            <div class="card three"></div>
+            <div class="card four"></div>
+
+        </div>
+        <div class="image images_foreground">
+            <img src="images/Alice.png" alt="Alicia">
+        </div>
+
+
+
+    </div>
+
     
 </body>
 </html>
