--- a/Repaso/transf&trans.html
+++ b/Repaso/transf&trans.html
@@ -15,10 +15,28 @@
     </style>
 </head>
 <body>
+    <h2>Translate</h2>
     <div class="shadow">
         <div class="circle"></div>
     </div>
-   
+    <hr>
+    <h2>Scale</h2>
+    <div class="shadow-2">
+        <div class="circle-2"></div>
+    </div>
+    <hr>
+    <p>Skew</p>
+    <div class="circle-3">
+
+    </div>
+    <hr>
+    <p>Rotate</p>
+    <div class="square">
+    </div>
+    <hr>
+    <p>transform origin</p>
+    <div class="square-2"></div>
+    <hr>
     
 </body>
 </html>
