--- a/Repaso/transf&trans.html
+++ b/Repaso/transf&trans.html
@@ -37,6 +37,37 @@
     <p>transform origin</p>
     <div class="square-2"></div>
     <hr>
-    
+    <p>perspective</p>
+    <div class="container-1">
+        <div class="item-1"></div>
+    </div>
+    <hr>
+    <p>backface - visibility</p>
+    <div class="card">
+        <div class="face front"></div>        
+        <div class="face back"></div>
+    </div>
+    <hr>
+    <p>efecto parallax</p>
+    <div class="parallax-container">
+        <div class="imagepreset image-background">
+            <img src="../images/Background.png" alt="alice backdrop">
+        </div>
+        <div class="imagepreset image-middle">
+            <div class="card-placeholder one"></div>
+            <div class="card-placeholder two" ></div>
+            <div class="card-placeholder three"></div>
+        </div>
+        <div class="imagepreset image-foreground">
+            <img src="../images/Alice.png" alt="Alice">
+        </div>
+    </div>
+    <hr>
+    <h1>Transiciones</h1>
+    <div class="box-container">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+    </div>
 </body>
 </html>
