--- a/Repaso/transf&trans.html
+++ b/Repaso/transf&trans.html
@@ -69,5 +69,20 @@
         <div class="box box-2"></div>
         <div class="box box-3"></div>
     </div>
+
+    <hr>
+    <div class="shadow">
+        <div class="circle-smooth"></div>
+    </div>
+    <hr>
+    <p>transtion timing function y delay</p>
+    <div class="container-ttf">
+        <div class="timing-circle t1"></div>
+        <div class="timing-circle t2"></div>
+        <div class="timing-circle t3"></div>
+        <div class="timing-circle t4"></div>
+        <div class="timing-circle t5"></div>
+        <div class="timing-circle t6"></div>
+    </div>
 </body>
 </html>
